# imagedecoder.mpo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/libjpeg-turbo/: CMakeLists.txt
depends/windows/libjpeg-turbo/: flags.txt
imagedecoder.mpo/: addon.xml.in
imagedecoder.mpo/resources/language/resource.language.ca_es/: strings.po
imagedecoder.mpo/resources/language/resource.language.cs_cz/: strings.po
imagedecoder.mpo/resources/language/resource.language.da_dk/: strings.po
imagedecoder.mpo/resources/language/resource.language.de_de/: strings.po
imagedecoder.mpo/resources/language/resource.language.en_gb/: strings.po
imagedecoder.mpo/resources/language/resource.language.es_es/: strings.po
imagedecoder.mpo/resources/language/resource.language.et_ee/: strings.po
imagedecoder.mpo/resources/language/resource.language.fi_fi/: strings.po
imagedecoder.mpo/resources/language/resource.language.fr_fr/: strings.po
imagedecoder.mpo/resources/language/resource.language.hr_hr/: strings.po
imagedecoder.mpo/resources/language/resource.language.id_id/: strings.po
imagedecoder.mpo/resources/language/resource.language.it_it/: strings.po
imagedecoder.mpo/resources/language/resource.language.ko_kr/: strings.po
lib/libmpo/: CMakeLists.txt
lib/libmpo/include/libmpo/: mpo.h
lib/libmpo/src/: .dmpo.c.swp  .mpodatasrc.c.swp
src/: MPOPicture.cpp  MPOPicture.h
(+7 files in other folders)
